--- a/index.html
+++ b/index.html
@@ -13,10 +13,48 @@
       <nav class="menu">
         <ul>
           <li><a href="#">Sobre</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
-      <h1 class="page-title">Debora Almeida</h1>
-      <h2 class="page-subtitle">Frontend Developer</h2>
+      <div>
+        <h1 class="page-title">Debora Almeida</h1>
+        <h2 class="page-subtitle">FullStack Developer</h2>
+      </div>
+
+      
     </header>
+    <section class="portfolio" id="portfolio">
+      <h2>Portfolio</h2>
+      <figure>
+        <img class="portfolio__img" src="./Images/webpages001.jpeg" alt="Web Pages">
+        <figcaption>Web Pages</figcaption>
+      </figure>
+      <figure>
+        <img class="portfolio__img" src="./Images/games001.jpeg" alt="Jogos">
+        <figcaption>Jogos</figcaption>
+      </figure>
+      <figure>
+        <img class="portfolio__img" src="./Images/apps001.jpeg" alt="Aplicações com JavaScript">
+        <figcaption>Aplicações com JavaScript</figcaption>
+      </figure>
+
+    </section>
+
+    <section class="contato" id="contato">
+      <h2>Contato</h2>
+    </section>
+
+    <footer class="imersao">
+      <p class="marca" >&copy Debora Almeida 2020</p>
+      <p>
+        Esta página foi desenvolvida durante as aulas do 
+        <a href="https://www.alura.com.br/imersao-css?utm_campaign=imersao_hipsterscss_live_promocao_1&utm_medium=email&utm_source=RD+Station" target="_blank" >
+          Projeto Imersão CSS</a> da <a href="https://www.alura.com.br/" target="_blank">Alura Cursos Online</a>!
+      </p>
+    
+    </footer>
+  </body>
+</html>
+
+
